--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@types/react-dom": "18.2.5",
         "bootstrap": "^5.3.3",
         "chart.js": "4.2.1",
+        "js-cookie": "^3.0.5",
         "lottie-react": "^2.4.1",
         "next": "13.4.8",
         "next-sitemap": "^4.2.3",
