--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "@types/react-dom": "18.2.5",
         "bootstrap": "^5.3.3",
         "chart.js": "4.2.1",
+        "framer-motion": "^12.23.6",
         "js-cookie": "^3.0.5",
         "lottie-react": "^2.4.1",
         "next": "13.4.8",
@@ -30,6 +31,7 @@
         "react-google-recaptcha": "^3.1.0",
         "react-hook-form": "^7.53.0",
         "react-icons": "^5.3.0",
+        "react-intersection-observer": "^9.16.0",
         "react-slick": "^0.30.2",
         "slick-carousel": "^1.8.1",
         "swiper": "^11.2.6"
