--- a/package.json
+++ b/package.json
@@ -28,13 +28,15 @@
         "react": "18.2.0",
         "react-bootstrap": "^2.10.5",
         "react-dom": "18.2.0",
+        "react-fast-marquee": "^1.6.5",
         "react-google-recaptcha": "^3.1.0",
         "react-hook-form": "^7.53.0",
         "react-icons": "^5.5.0",
         "react-intersection-observer": "^9.16.0",
-        "react-slick": "^0.30.2",
+        "react-simple-typewriter": "^5.0.1",
+        "react-slick": "^0.30.3",
         "slick-carousel": "^1.8.1",
-        "swiper": "^11.2.6"
+        "swiper": "^11.2.10"
     },
     "devDependencies": {
         "eslint": "8.43.0",
