--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "react-intersection-observer": "^9.16.0",
         "react-simple-typewriter": "^5.0.1",
         "react-slick": "^0.30.3",
+        "sharp": "^0.34.5",
         "slick-carousel": "^1.8.1",
         "swiper": "^11.2.10"
     },
