--- a/package.json
+++ b/package.json
@@ -35,14 +35,19 @@
         "react-intersection-observer": "^9.16.0",
         "react-simple-typewriter": "^5.0.1",
         "react-slick": "^0.30.3",
+        "react-snowfall": "^2.4.0",
+        "react-tsparticles": "^2.12.2",
         "sharp": "^0.34.5",
         "slick-carousel": "^1.8.1",
-        "swiper": "^11.2.10"
+        "swiper": "^11.2.10",
+        "tsparticles": "^3.9.1"
     },
     "devDependencies": {
+        "@tailwindcss/vite": "^4.1.17",
         "eslint": "8.43.0",
         "eslint-config-next": "13.4.6",
         "prettier": "^2.8.8",
-        "sass": "^1.63.4"
+        "sass": "^1.63.4",
+        "tailwindcss": "^4.1.17"
     }
 }
