ssr update for website

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "framer-motion": "^12.23.12",
         "js-cookie": "^3.0.5",
         "lottie-react": "^2.4.1",
-        "next": "13.4.8",
+        "next": "^16.0.10",
         "next-sitemap": "^4.2.3",
         "react": "18.2.0",
         "react-bootstrap": "^2.10.5",
