--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,7 @@
 {
-  "extends": "next/core-web-vitals",
-  "rules": {
-      "@next/next/no-img-element": "off"
-  }
+    "extends": "next/core-web-vitals",
+    "rules": {
+        "@next/next/no-img-element": "off",
+        "react/no-unknown-property": ["error", { "ignore": ["component"] }]
+    }
 }
