--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
         "lottie-react": "^2.4.1",
         "next": "^16.0.10",
         "next-sitemap": "^4.2.3",
-        "react": "18.2.0",
+        "react": "^18.3.1",
         "react-bootstrap": "^2.10.5",
-        "react-dom": "18.2.0",
+        "react-dom": "^18.3.1",
         "react-fast-marquee": "^1.6.5",
         "react-google-recaptcha": "^3.1.0",
         "react-hook-form": "^7.53.0",
